# MacShell

./: .gitignore  CMakeLists.txt  LICENSE  Link.md  README.md  a.json
inc/: base-file.hpp  brew-cmd.hpp  cmdline.hpp  constants.hpp  file-reader.hpp  io.hpp  sqlite.hpp  terminal.hpp
scripts/: battery  binpath  brew-graph  brew_install  chrome  clion  clt  cui  datagrip  git-all  git-down  git-up  idea  ip  kill-sangfor  l#  lines  music  now  pid  pname  pubip  pypack  realpath  rmfind  ss  term  treed  update  words
scripts/_/: battery  bin  charlen  clipboard  cmd  cmds  cui  cver  l#  lsh  minfo  music  pid  pycharm  readbyte  realpath  resolution  rmfind  ssudo  uninstall_mactex  update  wallpaper
scripts/__func__/: __exec__  __splitblock__  __splitline__  __str__
scripts/app/: typora
scripts/brew/: brew-clean  brew-del  brew-get  brew-init  brew-root
scripts/clean/: cl  cl-brew  cl-c  cl-d  cl-d-c  cl-d-d  cl-d-t  cl-dock  cl-epic  cl-privacy  cl-qq  cl-t  clc  clt
scripts/compiler/: g++  gcc
scripts/cui/: cui
scripts/db/: sqlite  sqlite-sort
scripts/find/: cfind  ffind  files  nfind  rmfind
scripts/flist/: music  wallpaper
scripts/fun/: cui  g  gpig
scripts/git/: git-all  git-cached  git-down  git-hub  git-pp  git-repo  git-repos  git-st  git-state  git-up  git-update
scripts/grep/: lgrep
scripts/ip/: ip  ip-lo  ip-pub
scripts/kill/: k  k-pd  k-vpn
scripts/ls/: l  la  ll  lt
scripts/proxy/: proxy  proxy-off  proxy-on  proxy-run  proxy-status
scripts/read/: readbyte  readchar
scripts/sed/: fsed
scripts/start/: s  s-pd  s-pixel  s-vm  s-vpn
scripts/update/: update  update-all  update-brew  update-conda  update-git  update-mc  update-tex
scripts/utils/: utils.py
scripts/vm/: s-pixel  s-snap  s-vm
scripts/vpn/: s-vpn
scripts/wc/: bytes
setup/: alias.cfg  install  install.sh  uninstall  uninstall.sh
src/: format.cpp  length.cpp  readbyte.cpp  split.cpp  string.cpp
src/sqlite/: brew-clean.cpp  brew-get.cpp  brew-init.cpp  brew-rm.cpp  (+4 more)
tests/: format.sh
